--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>CARAVAN</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
   </head>
 
   <body>
@@ -13,6 +14,11 @@
           CARAVAN
         </a>
       </h1>
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
     <nav>
       <ul class="nav-list">
@@ -141,30 +147,32 @@
             </p>
           </div>
         </section>
+        <section class="instagram">
+          <h2 class="instagram-heading common-heading">Instagram</h2>
+          <div class="sidebar-contents">
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+          </div>
+        </section>
+        <section class="categories">
+          <h2 class="categories-heading common-heading">Categories</h2>
+          <div class="sidebar-contents">
+            <p class="categories-text">Technology(15)</p>
+            <p class="categories-text">Business(23)</p>
+            <p class="categories-text">Entertainment(12)</p>
+            <p class="categories-text">Nature(32)</p>
+            <p class="categories-text">Education(9)</p>
+            <p class="categories-text">Adventure(23)</p>
+            <p class="categories-text">Communication(14)</p>
+          </div>
+         </section>
       </div>
-      <section class="instagram">
-        <h2 class="instagram-heading common-heading">Instagram</h2>
-        <div class="sidebar-contents">
-          <div class="instagram-box"></div>
-          <div class="instagram-box"></div>
-          <div class="instagram-box"></div>
-          <div class="instagram-box"></div>
-          <div class="instagram-box"></div>
-          <div class="instagram-box"></div>
-        </div>
-      </section>
-      <section class="categories">
-       <h2 class="categories-heading common-heading">Categories</h2>
-       <div class="sidebar-contents">
-         <p class="categories-text">Technology(15)</p>
-         <p class="categories-text">Business(23)</p>
-         <p class="categories-text">Entertainment(12)</p>
-         <p class="categories-text">Nature(32)</p>
-         <p class="categories-text">Education(9)</p>
-         <p class="categories-text">Adventure(23)</p>
-         <p class="categories-text">Communication(14)</p>
-       </div>
-      </section>
+      
+      
     </main>
     <footer>
       <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
